--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
         "@supabase/ssr": "^0.7.0",
         "@supabase/supabase-js": "^2.57.2",
+        "axios": "^1.11.0",
         "clsx": "^2.1.1",
         "next": "15.3.5",
         "react": "^19.0.0",
