--- a/package.json
+++ b/package.json
@@ -3,37 +3,37 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-      "dev": "next dev --turbopack",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint",
-      "format": "prettier --write ."
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "prettier --write ."
     },
     "dependencies": {
-      "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
-      "@supabase/ssr": "^0.7.0",
-      "@supabase/supabase-js": "^2.57.2",
-      "axios": "^1.11.0",
-      "clsx": "^2.1.1",
-      "next": "15.3.5",
-      "react": "^19.0.0",
-      "react-dom": "^19.0.0",
-      "tailwind-merge": "^3.3.1"
+        "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+        "@supabase/ssr": "^0.7.0",
+        "@supabase/supabase-js": "^2.57.2",
+        "axios": "^1.11.0",
+        "clsx": "^2.1.1",
+        "next": "15.3.5",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
-      "@types/node": "^20",
-      "@types/react": "^18",
-      "@types/react-dom": "^18",
-      "eslint": "^8",
-      "eslint-config-next": "15.0.3",
-      "postcss": "^8",
-      "prettier": "^3.3.3",
-      "tailwindcss": "^3.4.1",
-      "typescript": "^5"
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "15.0.3",
+        "postcss": "^8",
+        "prettier": "^3.3.3",
+        "supabase": "^2.51.0",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
     },
     "engines": {
-      "node": ">=18"
+        "node": ">=18"
     },
     "postinstall": "tailwindcss build -i ./src/styles/globals.css -o ./public/output.css"
-  }
-  
+}
